# leetspeak

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md
src/: lib.rs  translation_tables.rs
tests/: custom_translation.rs  implicit_conversion.rs  integration_tests.rs  translation.rs
