[package]
name = "leetspeak"
authors = ["Ethan Cox ethanrcox@gmail.com"]
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-only"
description = "random, non-random, and custom leetspeak translation functions"
documentation = "https://docs.rs/leetspeak/"
repository = "https://github.com/EthanC2/leetspeak"
readme = "README.md"
keywords = ["leetspeak", "translation"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"